<resources>
    <string name="app_name" translatable="false">Watch NASA</string>
    <string name="loading_error">Loading error!</string>
    <string name="retry">Try again!</string>
    <string name="cancel">Cancel</string>
    <string name="wiki_search">Wikipedia search</string>
    <string name="wiki_search_helper">Enter your request for Wiki search</string>
    <string name="wiki_url" translatable="false">https://en.wikipedia.org/wiki/</string>
    <string name="image_description">Image description</string>
    <string name="image_title">Image title</string>
    <string name="favorite">Favorite</string>
    <string name="settings">Settings</string>
    <string name="info">Info</string>
    <string name="search">Search</string>
    <string name="before_yesterday">Before yesterday</string>
    <string name="yesterday">Yesterday</string>
    <string name="today">Today</string>
    <string name="apod_fab" translatable="false">apod fab</string>
    <string name="gray_moon" translatable="false">Gray moon</string>
    <string name="red_mars" translatable="false">Red Mars</string>
    <string name="deep_space" translatable="false">Deep space</string>
    <string name="choose_app_theme">Choose the app theme:</string>
    <string name="planets_photo">Planets photo</string>
    <string name="earth">Earth</string>
    <string name="mars">Mars</string>
    <string name="solar">Solar Flare</string>
    <string name="start_time">Start Time: </string>
    <string name="peak_time">Peak Time: </string>
    <string name="end_time">End Time: </string>
    <string name="intensity">Intensity: </string>
    <string name="region">Source Region: </string>
    <string name="solar_flare">Solar Flare Data</string>
    <string name="sun">Sun</string>
    <string name="calendar">Calendar</string>
    <string name="rover_name">"Rover Name:"</string>
    <string name="earth_date">"Earth Date:"</string>
    <string name="camera_type">"Camera Type:"</string>
    <string name="nearest_date_message">Photo of nearest date is found!</string>
    <string name="date_range">Period:</string>
    <string name="no_data_for_selected_period">No data for selected period!</string>
    <string name="choose_another_selected_period">Please, choose another date range!</string>
    <string name="ok" translatable="false">OK</string>
    <string name="earth_photo_description" translatable="false">Earth photo description</string>
    <string name="date" translatable="false">date</string>
    <string name="select_date_range">Select date range</string>
    <string name="rover_spirit" translatable="false">spirit</string>
    <string name="rover_opportunity" translatable="false">opportunity</string>
    <string name="rover_curiosity" translatable="false">curiosity</string>
    <string name="add_data" translatable="false">add data</string>
    <string name="image_url" translatable="false">https://images-assets.nasa.gov/image/GSFC_20171208_Archive_e001117/GSFC_20171208_Archive_e001117~orig.jpg</string>
    <string name="sort_by_intensity_asc">sort by intensity (asc)</string>
    <string name="sort_by_intensity_dsc">sort by intensity (dsc)</string>
    <string name="sort_by_date">sort by date</string>
    <string name="choose_text_size">Choose text size:</string>
    <string name="title">Text Title</string>
    <string name="content">Text content.</string>
    <string name="about_intensity">About Solar Intensity</string>
    <string name="solar_intensity_information">Classification proposed in 1970 by D. Baker. A solar flare is assigned a score - a designation from a Latin letter and an index after it. The letter can be A, B, C, M, or X, depending on the magnitude of the X-ray intensity peak reached by the flare (from the smallest peak to the largest). The index refines the value of the flash intensity and can be from 1.0 to 9.9 for the letters A, B, C, M and more - for the letter X.</string>
    <string name="alpha_05" translatable="false">0.5</string>
</resources>