<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/solar_data_card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_4"
    app:cardCornerRadius="@dimen/radius_10">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding_8">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/mars_rover_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="@string/alpha_05"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/rover_name" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/mars_rover_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/rover_name" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/mars_camera_type_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="@string/alpha_05"
            android:layout_marginTop="@dimen/margin_4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mars_rover_title"
            tools:text="@string/camera_type" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/mars_camera_type_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_percent="0.7"
            android:gravity="end"
            android:layout_marginTop="@dimen/margin_4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mars_rover_text_view"
            tools:text="@string/camera_type" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/mars_photo_date_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="@string/alpha_05"
            android:layout_marginTop="@dimen/margin_4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mars_camera_type_text_view"
            tools:text="@string/earth_date" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/mars_photo_date_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mars_camera_type_text_view"
            tools:text="@string/earth_date" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>