<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/mars_tool_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?colorPrimaryVariant"
            app:title="@string/app_name" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mars_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/mars_tab_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/mars_view_pager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/mars_barrier" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/mars_barrier"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="mars_tab_layout" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/mars_v_guideline"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.96" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/mars_h_guideline"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.98" />


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/mars_rover_curiosity_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/rover_curiosity"
            android:src="@drawable/ic_rover_curiosity"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@id/mars_h_guideline"
            app:layout_constraintEnd_toStartOf="@id/mars_v_guideline" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/mars_rover_opportunity_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/rover_opportunity"
            android:src="@drawable/ic_rover_opportunity"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@id/mars_h_guideline"
            app:layout_constraintEnd_toStartOf="@id/mars_v_guideline" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/mars_rover_spirit_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/rover_spirit"
            android:src="@drawable/ic_rover_spirit"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@id/mars_h_guideline"
            app:layout_constraintEnd_toStartOf="@id/mars_v_guideline" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/mars_rover_choose_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/rover_name"
            app:layout_constraintBottom_toTopOf="@id/mars_h_guideline"
            app:layout_constraintEnd_toStartOf="@id/mars_v_guideline" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <ProgressBar
        android:id="@+id/mars_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        tools:visibility="visible" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>